<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorGris"
    >

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:src="@drawable/imagen2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtMain_email"
        style="@style/AppTheme.edtApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="25dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/login_email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtMain_pass"
        style="@style/AppTheme.edtApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="25dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/login_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMain_email"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:onClick="goToHomePage"
        style="@style/AppTheme.BtnApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="25dp"
        android:text="@string/login_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMain_pass" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="114dp"
        android:text="@string/recuperar_pass"
        android:textColor="@color/colorBlanco"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="155dp"
        android:onClick="goToCrearCuenta"
        android:text="@string/crear_cuenta"
        android:textColor="@color/colorBlanco"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>